--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.application.name=day12-20250916-practice
+spring.profiles.active=dev
+#spring.application.name=day12-20250916-practice
 # MySQL Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/todo_dev?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
